# CompilerTheory

./: README.md
doc/grammatical_analysis/: .~ga.doc  ga.doc
doc/lexical_analysis/: DFA.xls  associated_tables.doc  word_code.txt
doc/pretreatment_example/: README.md  test1.php  test1.result.php
presentation/: DFA.xls  展示.doc  编译原理展示.ppt
program/: CMakeLists.txt  main.cpp
program/data/: Storage.lex.php  Storage.php  Storage.pre.php  delete.lex.php  delete.php  delete.pre.php  test1.lex.php  test1.php  test1.pre.php  uploadImg.lex.php  uploadImg.php  uploadImg.pre.php
program/data/example/: pre1.php  rd1.php  rd2.php  rd3.php  rd4.php  rd5.php  rd6.php  rd7.php  test1.php
program/data/res/: pre1.lex.php  pre1.pre.php  rd1.lex.php  rd1.pre.php  rd2.lex.php  rd2.pre.php  rd3.lex.php  rd3.pre.php  rd4.lex.php  rd4.pre.php  rd5.lex.php  rd5.pre.php  rd6.lex.php  rd6.pre.php  rd7.lex.php  rd7.pre.php  test1.lex.php  test1.pre.php
program/header/: error_process.h  lex.h  pretreatment.h  recursive_descent.h
program/src/: error_process.cpp  lex.cpp  pretreatment.cpp  recursive_descent.cpp
program/windows_version/: main.cpp  phpcpl
program/windows_version/data/: Storage.lex.php  test1.lex.php  test1.pre.php  uploadImg.lex.php
program/windows_version/header/: error_process.h  lex.h  pretreatment.h  recursive_descent.h  word_code.h
